[package]
name = "bm25-turbo-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "CLI and HTTP server for BM25 Turbo"
keywords = ["bm25", "search", "cli", "retrieval", "ranking"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"

[[bin]]
name = "bm25-turbo"
path = "src/main.rs"

[dependencies]
bm25_turbo = { version = "0.2.0", path = "../bm25_turbo", features = ["parallel", "persistence", "simd", "server", "mcp", "huggingface", "ann"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
comfy-table = "7"
colored = "3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
csv = "1"
ctrlc = "3"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
