[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bm25-turbo"
version = "0.2.0"
description = "The fastest BM25 information retrieval engine -- Python bindings"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.9"
authors = [{ name = "The Sauce Suite" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.urls]
Homepage = "https://github.com/TheSauceSuite/BM25-Turbo-Rust-Python-WASM-CLI-"
Repository = "https://github.com/TheSauceSuite/BM25-Turbo-Rust-Python-WASM-CLI-"

[tool.maturin]
features = ["pyo3/extension-module"]
