[package]
name = "bm25-turbo-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "BM25 Turbo compiled to WebAssembly — the fastest BM25 search engine for the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bm25_turbo = { version = "0.2.0", path = "../bm25_turbo", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]
