[package]
name = "bm25_turbo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
readme = "../README.md"

[features]
default = ["parallel", "persistence", "simd"]
parallel = ["dep:rayon"]
persistence = ["dep:memmap2", "dep:bytemuck", "dep:xxhash-rust"]
simd = ["dep:pulp"]
server = ["dep:axum", "dep:tokio", "dep:tower-http"]
distributed = ["dep:tonic", "dep:tonic-prost", "dep:prost", "dep:tokio"]
mcp = ["dep:rmcp", "dep:schemars"]
huggingface = ["dep:reqwest", "dep:libc", "dep:base64"]
ann = []
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
full = ["parallel", "persistence", "simd", "server", "distributed", "mcp", "huggingface", "ann"]

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
regex = "1"
rust-stemmers = "1.2"
roaring = "0.10"
bincode = "1"
parking_lot = "0.12"
linked-hash-map = "0.5"

# Feature-gated
rayon = { version = "1.11", optional = true }
memmap2 = { version = "0.9", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
xxhash-rust = { version = "0.8", features = ["xxh64"], optional = true }
# roaring is now a direct dependency (used by WAL tombstone bitset)
pulp = { version = "0.22", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["cors", "compression-br", "trace"], optional = true }
tonic = { version = "0.14", optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"], optional = true }
schemars = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"], optional = true }
libc = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[build-dependencies]
tonic-build = "0.14"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
proptest = "1"
